lib/src/compiler/tests/testdata/errors/63.out
error: syntax error
 --> line:2:5
  |
2 |     true }
  |     ^ expected `condition`, `meta`, or `strings`
  |